--- a/labs/mod_6/labs-module-6/lab-6-1.html
+++ b/labs/mod_6/labs-module-6/lab-6-1.html
@@ -10,7 +10,7 @@
 function isPalindrom(s) {
     let middle = Math.floor(s.length / 2);
     isPal = true;
-    for (let i = 0; i < isPal; i++) {
+    for (let i = 0; i < middle; i++) {
         if (s[i] != s[s.length-1-i]) {
             isPal = false;
             break;
